# lachik-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lachikai/: __init__.py
src/lachikai/core/: __init__.py  types.py
src/lachikai/observations/: __init__.py  observation.py
src/lachikai/testing/: __init__.py  mock_world.py
src/lachikai/world/: __init__.py  entities.py
tests/unit/: test_mock_world.py  test_observation.py  test_package.py  test_vector2.py  test_world_entity.py
