[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lachik-ai"
version = "0.1.0.dev0"
description = "A modular Python framework for autonomous game agents and reusable game AI systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Horacio Ruggeri Ruiz" }
]
keywords = [
    "artificial intelligence",
    "game ai",
    "agents",
    "pygame",
    "finite state machine",
    "simulation"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
pygame = [
    "pygame>=2.6,<3"
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.11",
    "mypy>=1.15",
    "build>=1.2",
    "twine>=6"
]

[project.urls]
Repository = "https://github.com/the-pro-coder/lachik-ai"
Documentation = "https://github.com/the-pro-coder/lachik-ai"
Issues = "https://github.com/the-pro-coder/lachik-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lachikai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["lachikai"]
mypy_path = "src"